# oppBakunevich

./: .gitignore
lab1/: CMakeLists.txt  main.cpp  mainSecond.cpp  test.cpp
lab2/: CMakeLists.txt  main.cpp  mainSecond.cpp
lab3/: CMakeLists.txt  main.cpp
lab4/: CMakeLists.txt  main.cpp
lab5/: CMakeLists.txt  balancing.cpp  balancing.h  balansing.cpp  execute.cpp  execute.h  main.cpp
